[백엔드] 찜기능, 옵션기능, 태그기능, 그래프QL API 추가 및 테스트 코드 추가